Making some visual changes to the project

--- a/app/src/main/res/layout/menu_fragment.xml
+++ b/app/src/main/res/layout/menu_fragment.xml
@@ -45,7 +45,8 @@
         android:layout_toLeftOf="@id/start_game_button"
         android:adjustViewBounds="true"
         android:scaleType="centerCrop"
-        android:src="@drawable/button_google_play" />
+        android:src="@drawable/button_google_play"
+        android:visibility="invisible"/>
 
 	<ImageView
         android:id="@+id/title"
@@ -54,7 +55,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/title_margin_top"
         android:adjustViewBounds="true"
-        android:scaleType="centerCrop"
+        android:scaleType="fitCenter"
         android:src="@drawable/title" />
 	
 	<ImageView
