Started working on the new game settings, which will make swapping card sets easier.

--- a/app/src/main/res/layout/popup_settings_view.xml
+++ b/app/src/main/res/layout/popup_settings_view.xml
@@ -66,7 +66,7 @@
             android:shadowDx="4"
             android:shadowDy="4"
             android:shadowRadius="4"
-            android:text="@string/information"
+            android:text="@string/more_options"
             android:textColor="#FFFFFF"
             android:textSize="@dimen/popup_settings_sound_text_size" />
     </LinearLayout>
