--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,10 +1,11 @@
 <resources>
 
-    <style name="AppBaseTheme" parent="@android:style/Theme.Black.NoTitleBar.Fullscreen" />
+    <style name="AppBaseTheme" parent="Theme.AppCompat.NoActionBar" />
 
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
-
+        <item name="android:dialogPreferenceStyle">@style/Theme.AppCompat.Light.Dialog.Alert</item>
+        <item name="preferenceTheme">@style/PreferenceThemeOverlay</item>
     </style>
 
 </resources>
