--- a/app/src/main/res/layout/popup_won_view.xml
+++ b/app/src/main/res/layout/popup_won_view.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/button_back"
@@ -10,18 +10,25 @@
         android:layout_height="@dimen/popup_button_back"
         android:layout_marginBottom="@dimen/popup_button_back_bottom"
         android:layout_marginLeft="@dimen/popup_button_back_left"
+        android:layout_marginRight="@dimen/popup_button_back_left"
         android:src="@drawable/button_back"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/button_next"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/button_next"
         android:layout_width="@dimen/popup_button_back"
         android:layout_height="@dimen/popup_button_back"
+        android:layout_marginBottom="@dimen/popup_button_back_bottom"
+        android:layout_marginLeft="@dimen/popup_button_back_left"
+        android:layout_marginRight="@dimen/popup_button_back_left"
+        android:src="@drawable/button_again"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="@dimen/popup_button_back_bottom"
-        android:layout_marginRight="@dimen/popup_button_back_left"
-        android:src="@drawable/button_again" />
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/button_back" />
 
 </android.support.constraint.ConstraintLayout>
