--- a/app/src/main/res/layout/popup_won_view.xml
+++ b/app/src/main/res/layout/popup_won_view.xml
@@ -8,27 +8,53 @@
         android:id="@+id/button_back"
         android:layout_width="@dimen/popup_button_back"
         android:layout_height="@dimen/popup_button_back"
-        android:layout_marginBottom="@dimen/popup_button_back_bottom"
-        android:layout_marginLeft="@dimen/popup_button_back_left"
-        android:layout_marginRight="@dimen/popup_button_back_left"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
         android:src="@drawable/button_back"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/button_next"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <ImageView
         android:id="@+id/button_next"
         android:layout_width="@dimen/popup_button_back"
         android:layout_height="@dimen/popup_button_back"
-        android:layout_marginBottom="@dimen/popup_button_back_bottom"
-        android:layout_marginLeft="@dimen/popup_button_back_left"
-        android:layout_marginRight="@dimen/popup_button_back_left"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
         android:src="@drawable/button_again"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/button_back" />
+        app:layout_constraintStart_toEndOf="@+id/button_back"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:fontFamily="@font/grobold"
+        android:gravity="center"
+        android:text="@string/stage_clear"
+        android:textAllCaps="true"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
