--- a/app/src/main/res/layout/game_fragment.xml
+++ b/app/src/main/res/layout/game_fragment.xml
@@ -23,7 +23,7 @@
                 android:layout_marginRight="@dimen/clock_margin_right"
                 android:src="@drawable/time_bar" />
 
-            <TextView
+            <Chronometer
                 android:id="@+id/time_bar_text"
                 android:layout_width="@dimen/clock_width"
                 android:layout_height="@dimen/clock_height"
@@ -35,9 +35,8 @@
                 android:shadowDx="4"
                 android:shadowDy="4"
                 android:shadowRadius="4"
-                android:text="00:60"
                 android:textColor="#FFFFFF"
-                android:textSize="@dimen/clock_text_size" />
+                android:textSize="@dimen/clock_text_size"/>
 
         </RelativeLayout>
 
