Directing games should only be done by professionals with parent supervision

--- a/app/src/main/res/values-sw720dp/dimens.xml
+++ b/app/src/main/res/values-sw720dp/dimens.xml
@@ -17,7 +17,7 @@
     <dimen name="tooltip_margin_left">240dp</dimen>
     <dimen name="tooltip_margin_bottom">220dp</dimen>
     
-    <!-- theme -->
+    <!-- gameType -->
     <dimen name="theme_padding">80dp</dimen>
     <dimen name="theme_margin">40dp</dimen>
     
