--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -18,7 +18,7 @@
     <dimen name="tooltip_margin_left">180dp</dimen>
     <dimen name="tooltip_margin_bottom">170dp</dimen>
 
-    <!-- theme -->
+    <!-- gameType -->
     <dimen name="theme_padding">60dp</dimen>
     <dimen name="theme_margin">30dp</dimen>
     
