--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -37,9 +37,7 @@
     <dimen name="clock_text_size">20dp</dimen>
     
     <!-- popup won -->
-    <dimen name="popup_won_width">240dp</dimen>
-    <dimen name="popup_won_height">300dp</dimen>
-    <dimen name="popup_button_back">75dp</dimen>
+    <dimen name="popup_button_back">48dp</dimen>
     <dimen name="popup_button_back_left">30dp</dimen>
     <dimen name="popup_button_back_bottom">10dp</dimen>
     <dimen name="popup_button_star_size">57dp</dimen>
@@ -62,4 +60,8 @@
     <dimen name="popup_settings_padding_top">55dp</dimen>
     <dimen name="popup_settings_padding_left">20dp</dimen>
     <dimen name="difficulty_margin_vertical">30dp</dimen>
+
+    <!-- Pop Ups -->
+    <dimen name="popup_width">240dp</dimen>
+    <dimen name="popup_height">300dp</dimen>
 </resources>
