--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -37,9 +37,9 @@
     <dimen name="clock_text_size">20dp</dimen>
 
     <!-- popup won -->
-    <dimen name="popup_won_width">320dp</dimen>
-    <dimen name="popup_won_height">400dp</dimen>
-    <dimen name="popup_button_back">100dp</dimen>
+    <dimen name="popup_width">320dp</dimen>
+    <dimen name="popup_height">400dp</dimen>
+    <dimen name="popup_button_back">56dp</dimen>
     <dimen name="popup_button_back_left">38dp</dimen>
     <dimen name="popup_button_back_bottom">10dp</dimen>
     <dimen name="popup_button_star_size">75dp</dimen>
