Things were created, and intros were made.

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -64,4 +64,5 @@
     <!-- Pop Ups -->
     <dimen name="popup_width">240dp</dimen>
     <dimen name="popup_height">300dp</dimen>
+    <dimen name="popup_intro_width">400dp</dimen>
 </resources>
