--- a/app/src/main/res/layout/popup_intro.xml
+++ b/app/src/main/res/layout/popup_intro.xml
@@ -2,7 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="@dimen/popup_width"
+    android:layout_width="@dimen/popup_intro_width"
     android:layout_height="wrap_content"
     android:background="@drawable/tile">
 
