--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -62,4 +62,5 @@
     <dimen name="popup_settings_padding_top">68dp</dimen>
     <dimen name="popup_settings_padding_left">30dp</dimen>
 
+    <dimen name="popup_intro_width">500dp</dimen>
 </resources>
