--- a/app/src/main/res/values-sw720dp/dimens.xml
+++ b/app/src/main/res/values-sw720dp/dimens.xml
@@ -5,7 +5,7 @@
     <dimen name="title_width">800dp</dimen>
     <dimen name="title_height">240dp</dimen>
     <dimen name="title_margin_top">150dp</dimen>
-    
+
     <!-- menu buttons -->
     <dimen name="start_game_button">200dp</dimen>
     <dimen name="start_game_button_margin">50dp</dimen>
@@ -16,16 +16,16 @@
     <dimen name="tooltip_height">70dp</dimen>
     <dimen name="tooltip_margin_left">240dp</dimen>
     <dimen name="tooltip_margin_bottom">220dp</dimen>
-    
+
     <!-- gameType -->
     <dimen name="theme_padding">80dp</dimen>
     <dimen name="theme_margin">40dp</dimen>
-    
+
     <!-- difficulty level -->
     <dimen name="difficulty_padding">80dp</dimen>
     <dimen name="difficulty_margin">20dp</dimen>
     <dimen name="difficulty_margin_top">40dp</dimen>
-    
+
     <!-- game -->
     <dimen name="margine_top">70dp</dimen>
     <dimen name="board_padding">20dp</dimen>
@@ -34,7 +34,7 @@
     <dimen name="clock_margin_right">100dp</dimen>
     <dimen name="clock_text_margin_right">80dp</dimen>
     <dimen name="clock_text_size">25dp</dimen>
-    
+
     <!-- popup won -->
     <dimen name="popup_width">400dp</dimen>
     <dimen name="popup_height">500dp</dimen>
@@ -52,7 +52,7 @@
     <dimen name="popup_button_time_margin_right">30dp</dimen>
     <dimen name="popup_button_time_size">30dp</dimen>
     <dimen name="popup_button_score_margin_bottom">145dp</dimen>
-    
+
     <!-- settings popup -->
     <dimen name="popup_settings_width">400dp</dimen>
     <dimen name="popup_settings_height">250dp</dimen>
@@ -60,4 +60,6 @@
     <dimen name="popup_settings_sound_text_size">25dp</dimen>
     <dimen name="popup_settings_padding_top">68dp</dimen>
     <dimen name="popup_settings_padding_left">30dp</dimen>
+
+    <dimen name="popup_intro_width">600dp</dimen>
 </resources>
