--- a/app/src/main/res/layout/popup_intro.xml
+++ b/app/src/main/res/layout/popup_intro.xml
@@ -2,7 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="@dimen/popup_intro_width"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@drawable/tile">
 
@@ -26,7 +26,7 @@
 
     <TextView
         android:id="@+id/description"
-        android:layout_width="0dp"
+        android:layout_width="@dimen/popup_intro_width"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
