--- a/app/src/main/res/layout/game_fragment.xml
+++ b/app/src/main/res/layout/game_fragment.xml
@@ -14,6 +14,14 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/margin_top" >
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/ic_flip_all_cards"
+                android:text="Flip all cards."
+                android:textSize="@dimen/clock_text_size"
+                android:fontFamily="@font/grobold"/>
+
             <ImageView
                 android:id="@+id/time_bar_image"
                 android:layout_width="@dimen/clock_width"
