--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -34,7 +34,7 @@
     <dimen name="clock_height">50dp</dimen>
     <dimen name="clock_margin_right">50dp</dimen>
     <dimen name="clock_text_margin_right">35dp</dimen>
-    <dimen name="clock_text_size">20dp</dimen>
+    <dimen name="clock_text_size">20sp</dimen>
     
     <!-- popup won -->
     <dimen name="popup_button_back">48dp</dimen>
