--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <integer name="flip_all_up_time">1500</integer>
+    <integer name="blink_time">150</integer>
 </resources>
