EEG Lichtgröße angepasst

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,7 @@
         android:id="@+id/v_eeg_blink"
         android:layout_gravity="bottom|end"
         android:background="@android:color/black"
-        android:layout_width="40dp"
-        android:layout_height="40dp" />
+        android:layout_width="@dimen/eeg_blink_size"
+        android:layout_height="@dimen/eeg_blink_size" />
 
 </FrameLayout>
