--- a/app/src/main/res/values-sw720dp/dimens.xml
+++ b/app/src/main/res/values-sw720dp/dimens.xml
@@ -33,6 +33,7 @@
     <dimen name="clock_height">80dp</dimen>
     <dimen name="clock_margin_right">100dp</dimen>
     <dimen name="clock_text_margin_right">80dp</dimen>
+    <dimen name="enlarged_image_size">600dp</dimen>
 
     <!-- popup won -->
     <dimen name="popup_width">400dp</dimen>
